--- a/AZoom.html
+++ b/AZoom.html
@@ -143,23 +143,24 @@
                     <h2>Pay Bill</h2>
                     <form id="payment-form">
                         <label for="days">Number of Days:</label>
-                        <input type="number" id="days" name="days">
+                        <input type="number" id="days" name="days" required>
                         <br><br>
                         <label for="total">Total:</label>
                         <input type="text" id="total" name="total" readonly>
                         <br><br>
                         <label for="card-number">Credit Card Number:</label>
-                        <input type="text" id="card-number" name="card-number">
+                        <input type="text" id="card-number" name="card-number" pattern="[0-9]{16}" title="Enter a valid 16-digit credit card number" required>
                         <br><br>
                         <label for="exp-date">Expiration Date:</label>
-                        <input type="text" id="exp-date" name="exp-date">
+                        <input type="text" id="exp-date" name="exp-date" placeholder="MM/YY" pattern="(0[1-9]|1[0-2])\/[0-9]{2}" title="Enter a valid expiration date in MM/YY format" required>
                         <br><br>
                         <label for="cvc">CVC:</label>
-                        <input type="text" id="cvc" name="cvc">
+                        <input type="text" id="cvc" name="cvc" pattern="[0-9]{3}" title="Enter a valid 3-digit CVC" required>
                         <br><br>
                         <input type="submit" value="Pay">
                     </form>
             </div>
+
         </section>
 
         <section id="contact">
