--- a/AZoom.html
+++ b/AZoom.html
@@ -2,81 +2,80 @@
 <html>
 
 <head>
-  <!-- Declare the character encoding of the document -->
-  <meta charset="UTF-8">
-  <!-- Set the title of the page -->
-  <title>AZoom Car Rental</title>
-  <!-- Link to the stylesheet for the page -->
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- Declare the character encoding of the document -->
+    <meta charset="UTF-8">
+    <!-- Set the title of the page -->
+    <title>AZoom Car Rental</title>
+    <!-- Link to the stylesheet for the page -->
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-  <!-- The header of the page -->
-  <header>
-    <!-- The title of the website -->
-    <h1>AZoom Car Rental</h1>
-    <!-- The navigation menu -->
-    <nav>
-      <ul>
-        <!-- Links to different sections of the page -->
-        <li><a href="#home">Home</a></li>
-        <li><a href="#reserve">Reserve a Car</a></li>
-        <li><a href="#process">Rent a Car</a></li>
-        <li><a href="#return">Return a Car</a></li>
-        <li><a href="#bill">Pay Final Bill</a></li>
-      </ul>
-    </nav>
-  </header>
+    <!-- The header of the page -->
+    <header>
+        <!-- The title of the website -->
+        <h1>AZoom Car Rental</h1>
+        <!-- The navigation menu -->
+        <nav>
+            <ul>
+                <!-- Links to different sections of the page -->
+                <li><a href="#home">Home</a></li>
+                <li><a href="#reserve">Reserve a Car</a></li>
+                <li><a href="#process">Rent a Car</a></li>
+                <li><a href="#return">Return a Car</a></li>
+                <li><a href="#bill">Pay Final Bill</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- The main content of the page -->
-  <main>
-    <!-- The Home section -->
-    <section id="home">
-      <!-- The header for the section -->
-      <h2 class="animated fadeInDown">Welcome to AZoom Car Rental</h2>
-      <!-- The description of the section -->
-      <p class="animated fadeInUp">We offer a wide range of cars to rent, at competitive prices.</p>
-    </section>
+    <!-- The main content of the page -->
+    <main>
+        <!-- The Home section -->
+        <section id="home">
+            <!-- The header for the section -->
+            <h2 class="animated fadeInDown">Welcome to AZoom Car Rental</h2>
+            <!-- The description of the section -->
+            <p class="animated fadeInUp">We offer a wide range of cars to rent, at competitive prices.</p>
+        </section>
 
-    <!-- The Reserve section -->
-    <section id="reserve">
-      <!-- The header for the section -->
-      <h2>Reserve our Cars</h2>
-      <!-- The list of available cars -->
-      <ul>
-        <!-- The first car -->
-        <li>
-          <!-- The image of the car -->
-          <img src="./image/sedan.jpg" alt="Sedan" class="car-image"
-            onclick="window.open('https://www.carwale.com/honda-cars/city/360-view/', '_blank')">
-          <!-- The information about the car -->
-          <div class="car-info">
-            <h3>Sedan</h3>
-            <p>$50/day</p>
-            <!-- The button to reserve the car -->
-            <button class="reserve-btn" data-price="50">Reserve</button>
-          </div>
-        </li>
+        <!-- The Reserve section -->
+        <section id="reserve">
+            <!-- The header for the section -->
+            <h2>Reserve our Cars</h2>
+            <!-- The list of available cars -->
+            <ul>
+                <li>
+                    <!-- The image of the car -->
+                    <img src="./image/sedan.jpg" alt="Sedan" class="car-image"
+                        onclick="window.open('https://www.carwale.com/honda-cars/city/360-view/', '_blank')">
+                    <!-- The information about the car -->
+                    <div class="car-info">
+                        <h3>Sedan</h3>
+                        <p>$50/day</p>
+                        <!-- The button to reserve the car -->
+                        <button class="reserve-btn" data-car="Sedan" data-price="50">Reserve</button>
+                    </div>
+                </li>
                 <li>
                     <img src="./image/suv.jpg" alt="SUV" class="car-image"
                         onclick="window.open('https://www.carwale.com/honda-cars/cr-v/360-view/', '_blank')">
                     <h3>SUV</h3>
                     <p>$60/day</p>
-                    <button class="reserve-btn" data-price="60">Reserve</button>
+                    <button class="reserve-btn" data-car="SUV" data-price="60">Reserve</button>
                 </li>
                 <li>
                     <img src="./image/mpv.jpg" alt="Mpv" class="car-image"
                         onclick="window.open('https://www.carwale.com/toyota-cars/innova-crysta/360-view/', '_blank')">
                     <h3>MPV</h3>
                     <p>$70/day</p>
-                    <button class="reserve-btn" data-price="70">Reserve</button>
+                    <button class="reserve-btn" data-car="MPV" data-price="70">Reserve</button>
                 </li>
                 <li>
                     <img src="./image/convertible.jpg" alt="Convertible" class="car-image"
                         onclick="window.open('https://www.carwale.com/honda-cars/cr-v/360-view/', '_blank')">
                     <h3>Convertible</h3>
                     <p>$80/day</p>
-                    <button class="reserve-btn" data-price="80">Reserve</button>
+                    <button class="reserve-btn" data-car="Convertible" data-price="80">Reserve</button>
                 </li>
             </ul>
         </section>
@@ -138,24 +137,41 @@
 
             <div class="step">
                 <h2>Step 4: Customer pays the final bill</h2>
+                <p>Customer need to pay the reserve fee first</p>
                 <p>Any damage found will be paid when the car is returned</p>
+                <p>Please fill up and process payment</p>
                 <section id="bill">
                     <h2>Pay Bill</h2>
-                    <form id="payment-form">
+
+                    <form id="info-form">
                         <label for="days">Number of Days:</label>
-                        <input type="number" id="days" name="days" required>
+                        <input type="number" id="days" name="days" placeholder="Select number of day" required>
                         <br><br>
-                        <label for="total">Total:</label>
-                        <input type="text" id="total" name="total" readonly>
+                        <label for="car">Vehicle type:</label>
+                        <input type="text" id="car" name="car" placeholder="Reserve your favour car" readonly>
                         <br><br>
+                        <label for="price">Price per day $:</label>
+                        <input type="text" id="price" name="price" readonly>
+                        <br><br>
+                        <label for="total">Total price $:</label>
+                        <input type="text" id="total" name="total" placeholder="Click confirm to count" readonly>
+                        <input type="submit" value="Confirm">
+                    </form>
+                    <br><br>
+                    <form id="payment-form">
+
                         <label for="card-number">Credit Card Number:</label>
-                        <input type="text" id="card-number" name="card-number" pattern="[0-9]{16}" title="Enter a valid 16-digit credit card number" required>
+                        <input type="text" id="card-number" name="card-number" pattern="[0-9]{16}"
+                            title="Enter a valid 16-digit credit card number" required>
                         <br><br>
                         <label for="exp-date">Expiration Date:</label>
-                        <input type="text" id="exp-date" name="exp-date" placeholder="MM/YY" pattern="(0[1-9]|1[0-2])\/[0-9]{2}" title="Enter a valid expiration date in MM/YY format" required>
+                        <input type="text" id="exp-date" name="exp-date" placeholder="MM/YY"
+                            pattern="(0[1-9]|1[0-2])\/[0-9]{2}" title="Enter a valid expiration date in MM/YY format"
+                            required>
                         <br><br>
                         <label for="cvc">CVC:</label>
-                        <input type="text" id="cvc" name="cvc" pattern="[0-9]{3}" title="Enter a valid 3-digit CVC" required>
+                        <input type="text" id="cvc" name="cvc" pattern="[0-9]{3}" title="Enter a valid 3-digit CVC"
+                            required>
                         <br><br>
                         <input type="submit" value="Pay">
                     </form>
